Closed Bug 573315 Opened 14 years ago Closed 14 years ago

compilation failure: mozilla/layout/base/nsPresShell.cpp missing nsIMemoryReporter.h

Categories

(Core :: Layout, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: ishikawa, Unassigned)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; ja; rv:1.9.2.3) Gecko/20100401 Firefox/3.6.3 ( .NET CLR 3.5.30729)
Build Identifier: (build failure) TB3 comm-central (likely to be 3.2a1pre or something like it)

While trying to compile TB3 (the developer version (nightly)) using
comm-central, I noticed a compilation error in one file.

mozilla/layout/base/nsPresShell.cpp

There is a macro called
NS_MEMORY_REPORTER_IMPLEMENT
near line 1565 (used twice), but it is not defined anywhere.

By including "nsIMemoryReporter.h", it compiled and
I could build TB3 for a target test PC.

Somehow the define is missing.


Reproducible: Always




After seeing my configuration info (mozilla version, comm-central version)
and mozconfig attached below, Justine Wood figured out that the include is not
carried out correctly when MOZ_MEDIA is not defined.

Justine Wood wrote in mozilla.dev.builds newsgroup:
--- quote ----
Haven't noticed, and thank you for the info you supplied;

I investigated and it was added in
http://hg.mozilla.org/mozilla-central/rev/d1fd855f7ebe (with a bustage
fix in: http://hg.mozilla.org/mozilla-central/rev/633756e2a580

This is a valid bug...

The reason the works for me, and on trunk is:

* nsPresShell.cpp includes "nsHTMLMediaElement.h" in an ifdef MOZ_MEDIA
block [1]
* nsHTMLMediaElement.h includes "nsMediaDecoder.h" [2]
* nsMediaDecoder.h includes "mozilla/XPCOM.h" [3]
* XPCOM.h includes "nsIMemoryReporter.h" [4]
* and lastly nsIMemoryReporter.h defines NS_MEMORY_REPORTER_IMPLEMENT
via its IDL [5]

I would suggest filing this as a bug, and attach the patch. Please CC
me. [You may quote any of the info I gave here if you wish]

[1]
http://mxr.mozilla.org/mozilla-central/source/layout/base/nsPresShell.cpp?mark=159-161#155
[2]
http://mxr.mozilla.org/mozilla-central/source/content/html/content/public/nsHTMLMediaElement.h?mark=43-43#40
[3]
http://mxr.mozilla.org/mozilla-central/source/content/media/nsMediaDecoder.h?mark=41-41#39
[4]
http://mxr.mozilla.org/mozilla-central/source/xpcom/build/XPCOM.h?mark=87-87#80
[5]
http://mxr.mozilla.org/mozilla-central/source/xpcom/base/nsIMemoryReporter.idl?mark=94-102#90

-- ~Justin Wood (Callek) 
--- end quote ---

The configuration that triggered this bug on one of my build PC is

m-c ident
c-c ident
mozconfig info.

========================================
hg -R mozilla ident
8cfc45d20852+ tip

========================================
hg ident
05dcd2dd352d+ tip

========================================
My usual make wrapper.
cat do-make.sh
:
#
export MOZCONFIG=/extra/ishikawa/download/TB-3HG/new-src/mozconfig-tb3
make -f client.mk $*

========================================
mozconfig file.
----------------------------------------
cat mozconfig-tb3
mk_add_options MOZ_OBJDIR=@TOPSRCDIR@/../objdir-tb3
mk_add_options MOZ_CO_PROJECT=mail

ac_add_options --enable-application=mail
ac_add_options --enable-optimize
ac_add_options --disable-tests
# # ac_add_options --enable-debug
ac_add_options --disable-debug

ac_add_options --enable-shared

#
# Disable l10n for now
# ac_add_options --enable-ui-locale=ja
#
ac_add_options --enable-official-branding
ac_add_options --disable-crashreporter
# ac_add_options --with-l10n-base=/extra/ishikawa/download/TB-3HG/new-src/l10n

ac_add_options --enable-default-toolkit=cairo-gtk2

ac_add_options --disable-ogg
ac_add_options --disable-wave
ac_add_options --disable-webm
ac_add_options --disable-necko-wifi

# NO according to mozilla # ac_add_options --enable-system-cairo


mk_add_options BUILD_OFFICIAL=1
mk_add_options MOZILLA_OFFICIAL=1
mk_add_options MOZ_CO_LOCALES=ja
mk_add_options BUILD_MODULES=all
Patch to include nsIMemoryReporter.h for successful compilation and build.
Attachment #452527 - Flags: review?
Attachment #452527 - Flags: review? → review?(vladimir)
Status: UNCONFIRMED → NEW
Ever confirmed: true
vlad, this sounds like your thing?
http://hg.mozilla.org/mozilla-central/rev/91221ec19e1f
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: