Bug 573315 - compilation failure: mozilla/layout/base/nsPresShell.cpp missing nsIMemoryReporter.h. r=vlad